--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Take Me Out</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
+    <header><h1>Take Me Out</h1></header>
     <main>
-      <h1>Hello World!</h1>
+      <h2>Hello World!</h2>
     </main>
     <!-- keep at bottom of body -->
     <script src="./assets/js/script.js"></script>
