adds map to homepage

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <main>
       <h1>Hello World!</h1>
     </main>
+    <div id="map"></div>
     <!-- keep at bottom of body -->
     <script src="./assets/js/script.js"></script>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDMAjoIQZ_CJWBTz9m52oX-6WKhdK463GQ&callback=initMap&libraries=places&v=weekly"
+      defer
+    ></script>
   </body>
 </html>
