--- a/index.html
+++ b/index.html
@@ -15,26 +15,53 @@
   <body>
     <div class="custom-menu-wrapper">
       <div class="pure-menu custom-menu custom-menu-top">
-          <a href="#" class="pure-menu-heading custom-menu-brand">Brand</a>
-          <a href="#" class="custom-menu-toggle" id="toggle"><s class="bar"></s><s class="bar"></s></a>
+        <a href="#" class="pure-menu-heading custom-menu-brand">Brand</a>
+        <a href="#" class="custom-menu-toggle" id="toggle"
+          ><s class="bar"></s><s class="bar"></s
+        ></a>
       </div>
-      <div class="pure-menu pure-menu-horizontal pure-menu-scrollable custom-menu custom-menu-bottom custom-menu-tucked" id="tuckedMenu">
-          <div class="custom-menu-screen"></div>
-          <ul class="pure-menu-list">
-              <li class="pure-menu-item"><a href="#" class="pure-menu-link">Home</a></li>
-              <li class="pure-menu-item"><a href="#" class="pure-menu-link">About</a></li>
-              <li class="pure-menu-item"><a href="#" class="pure-menu-link">Contact</a></li>
-              <li class="pure-menu-item"><a href="#" class="pure-menu-link">Blog</a></li>
-              <li class="pure-menu-item"><a href="#" class="pure-menu-link">GitHub</a></li>
-              <li class="pure-menu-item"><a href="#" class="pure-menu-link">Twitter</a></li>
-              <li class="pure-menu-item"><a href="#" class="pure-menu-link">Apple</a></li>
-              <li class="pure-menu-item"><a href="#" class="pure-menu-link">Google</a></li>
-              <li class="pure-menu-item"><a href="#" class="pure-menu-link">Wang</a></li>
-              <li class="pure-menu-item"><a href="#" class="pure-menu-link">Yahoo</a></li>
-              <li class="pure-menu-item"><a href="#" class="pure-menu-link">W3C</a></li>
-          </ul>
+      <div
+        class="pure-menu pure-menu-horizontal pure-menu-scrollable custom-menu custom-menu-bottom custom-menu-tucked"
+        id="tuckedMenu"
+      >
+        <div class="custom-menu-screen"></div>
+        <ul class="pure-menu-list">
+          <li class="pure-menu-item">
+            <a href="#" class="pure-menu-link">Home</a>
+          </li>
+          <li class="pure-menu-item">
+            <a href="#" class="pure-menu-link">About</a>
+          </li>
+          <li class="pure-menu-item">
+            <a href="#" class="pure-menu-link">Contact</a>
+          </li>
+          <li class="pure-menu-item">
+            <a href="#" class="pure-menu-link">Blog</a>
+          </li>
+          <li class="pure-menu-item">
+            <a href="#" class="pure-menu-link">GitHub</a>
+          </li>
+          <li class="pure-menu-item">
+            <a href="#" class="pure-menu-link">Twitter</a>
+          </li>
+          <li class="pure-menu-item">
+            <a href="#" class="pure-menu-link">Apple</a>
+          </li>
+          <li class="pure-menu-item">
+            <a href="#" class="pure-menu-link">Google</a>
+          </li>
+          <li class="pure-menu-item">
+            <a href="#" class="pure-menu-link">Wang</a>
+          </li>
+          <li class="pure-menu-item">
+            <a href="#" class="pure-menu-link">Yahoo</a>
+          </li>
+          <li class="pure-menu-item">
+            <a href="#" class="pure-menu-link">W3C</a>
+          </li>
+        </ul>
       </div>
-  </div>
+    </div>
     <main>
       <h1>Hello World!</h1>
     </main>
@@ -43,7 +70,7 @@
     <form class="pure-form">
       <fieldset>
         <legend>A compact inline form</legend>
-        <input type="email" placeholder="Email" />
+        <input type="text" placeholder="Food Type" />
         <div class="pure-menu pure-menu-horizontal">
           <ul class="pure-menu-list">
             <li
