--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <div class="custom-menu-screen"></div>
         <ul class="pure-menu-list">
           <li class="pure-menu-item">
-            <a href="#" class="pure-menu-link">Home</a>
+            <a href="index.html" class="pure-menu-link">Home</a>
           </li>
           <li class="pure-menu-item">
-            <a href="#" class="pure-menu-link">About Us</a>
+            <a href="aboutus.html" class="pure-menu-link">About Us</a>
           </li>
           <li class="pure-menu-item">
-            <a href="#" class="pure-menu-link">FAQs</a>
+            <a href="faq.html" class="pure-menu-link">FAQs</a>
           </li>
         </ul>
       </div>
