--- a/faq.html
+++ b/faq.html
@@ -4,8 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Take Me Out FAQ</title>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/purecss@2.0.5/build/pure-min.css"
+      integrity="sha384-LTIDeidl25h2dPxrB2Ekgc9c7sEC3CWGM6HeFmuDNUjX76Ert4Z4IY714dhZHPLd"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
+    <div class="custom-menu-wrapper">
+      <div class="pure-menu custom-menu custom-menu-top">
+        <a href="#" class="pure-menu-heading custom-menu-brand">Take Me Out</a>
+        <a href="#" class="custom-menu-toggle" id="toggle"
+          ><s class="bar"></s><s class="bar"></s
+        ></a>
+      </div>
+      <div
+        class="pure-menu pure-menu-horizontal pure-menu-scrollable custom-menu custom-menu-bottom custom-menu-tucked"
+        id="tuckedMenu"
+      >
+        <div class="custom-menu-screen"></div>
+        <ul class="pure-menu-list">
+          <li class="pure-menu-item">
+            <a href="index.html" class="pure-menu-link">Home</a>
+          </li>
+          <li class="pure-menu-item">
+            <a href="aboutus.html" class="pure-menu-link">About Us</a>
+          </li>
+          <li class="pure-menu-item">
+            <a href="faq.html" class="pure-menu-link">FAQs</a>
+          </li>
+        </ul>
+      </div>
+    </div>
     <h1>Take Me Out FAQ</h1>
     <p>Read out frequently asked questions below!</p>
   </body>
