adds acuurate names and choices to the dropdown menus

--- a/index.html
+++ b/index.html
@@ -50,18 +50,16 @@
             <li
               class="pure-menu-item pure-menu-has-children pure-menu-allow-hover"
             >
-              <a href="#" class="pure-menu-link">Courses</a>
+              <a href="#" class="pure-menu-link">Radius</a>
               <ul class="pure-menu-children">
                 <li class="pure-menu-item">
-                  <a href="#" class="pure-menu-link"> Placement 100</a>
+                  <a href="#" class="pure-menu-link"> 10 miles</a>
                 </li>
                 <li class="pure-menu-item">
-                  <a href="#" class="pure-menu-link">
-                    Complete Interview Preparation</a
-                  >
+                  <a href="#" class="pure-menu-link"> 20 miles</a>
                 </li>
                 <li class="pure-menu-item">
-                  <a href="#" class="pure-menu-link"> Android Bootcamp</a>
+                  <a href="#" class="pure-menu-link"> 30 miles</a>
                 </li>
               </ul>
             </li>
@@ -70,18 +68,15 @@
               style="background-color: green"
             >
               <a href="#" class="pure-menu-link" style="color: white">
-                Contact US
+                Open/Closed
               </a>
 
               <ul class="pure-menu-children">
                 <li class="pure-menu-item">
-                  <a href="#" class="pure-menu-link"> At Office </a>
+                  <a href="#" class="pure-menu-link"> Open </a>
                 </li>
                 <li class="pure-menu-item">
-                  <a href="#" class="pure-menu-link"> At Headquarter </a>
-                </li>
-                <li class="pure-menu-item">
-                  <a href="#" class="pure-menu-link"> Via mail </a>
+                  <a href="#" class="pure-menu-link"> Closed </a>
                 </li>
               </ul>
             </li>
