--- a/faq.html
+++ b/faq.html
@@ -13,13 +13,17 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
+    <div class="fontSize">
+
+    
     <div class="custom-menu-wrapper">
       <div class="pure-menu custom-menu custom-menu-top">
-        <a href="#" class="pure-menu-heading custom-menu-brand">Take Me Out</a>
+        <a href="#" class="pure-menu-heading custom-menu-brand" id="titleFont">Take Me Out</a>
         <a href="#" class="custom-menu-toggle" id="toggle"
           ><s class="bar"></s><s class="bar"></s
         ></a>
       </div>
+    </div>
       <div
         class="pure-menu pure-menu-horizontal pure-menu-scrollable custom-menu custom-menu-bottom custom-menu-tucked"
         id="tuckedMenu"
