adds in weather data for current temp, high temp, low temp, and humidity

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </figure>
           </div>
           <div class="media-content">
-            <p class="title is-4">Current Weather</p>
+            <p class="title is-4" id="currentWeather">Current Weather</p>
           </div>
         </div>
 
