--- a/index.html
+++ b/index.html
@@ -54,10 +54,7 @@
         <div class="media">
           <div class="media-left">
             <figure class="image is-48x48">
-              <img
-                src="https://bulma.io/images/placeholders/96x96.png"
-                alt="Placeholder image"
-              />
+              <img id="iconImage" alt="Current Weather" />
             </figure>
           </div>
           <div class="media-content">
