change the button type from 'submit' to 'button'

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </li>
           </ul>
         </div>
-        <button type="submit" class="pure-button pure-button-primary">
+        <button type="button" class="pure-button pure-button-primary">
           Search
         </button>
       </fieldset>
