add id='search-button' to the Search button, line 113, HTML

--- a/index.html
+++ b/index.html
@@ -109,7 +109,11 @@
             </li>
           </ul>
         </div>
-        <button type="button" class="pure-button pure-button-primary">
+        <button
+          id="search-button"
+          type="button"
+          class="pure-button pure-button-primary"
+        >
           Search
         </button>
       </fieldset>
