puts weather card next to map and ups the size of the weather icon

--- a/index.html
+++ b/index.html
@@ -46,26 +46,27 @@
         </ul>
       </div>
     </div>
-    <main></main>
-    <div id="map"></div>
+    <main>
+      <div id="map"></div>
 
-    <div class="card">
-      <div class="card-content">
-        <div class="media">
-          <div class="media-left">
-            <figure class="image is-48x48">
-              <img id="iconImage" alt="Current Weather" />
-            </figure>
+      <div class="card">
+        <div class="card-content">
+          <div class="media">
+            <div class="media-left">
+              <figure>
+                <img id="iconImage" alt="Current Weather" />
+              </figure>
+            </div>
+            <br />
+            <div class="media-content">
+              <p class="title is-4" id="currentWeather">Current Weather</p>
+            </div>
           </div>
-          <div class="media-content">
-            <p class="title is-4" id="currentWeather">Current Weather</p>
-          </div>
+
+          <div class="content">High: Low: Humidity:</div>
         </div>
-
-        <div class="content">High: Low: Humidity:</div>
       </div>
-    </div>
-
+    </main>
     <form class="pure-form">
       <fieldset>
         <legend>
