--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
       integrity="sha384-LTIDeidl25h2dPxrB2Ekgc9c7sEC3CWGM6HeFmuDNUjX76Ert4Z4IY714dhZHPLd"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
-    />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
@@ -31,6 +27,7 @@
       </div>
       <div
         class="pure-menu pure-menu-horizontal pure-menu-scrollable custom-menu custom-menu-bottom custom-menu-tucked"
+        id="tuckedMenu"
       >
         <div class="custom-menu-screen"></div>
         <ul class="pure-menu-list">
