changed the background color

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
-  <body>
+  <body style="background-color:powderblue;">
     <div class="fontSize">
       <div class="custom-menu-wrapper, fontSize">
         <div class="pure-menu custom-menu custom-menu-top">
