created FAQ template

--- a/faq.html
+++ b/faq.html
@@ -43,6 +43,29 @@
       </div>
     </div>
     <h1>Take Me Out FAQ</h1>
+
+    <div>
+    <H1>Question 1 </H1>
+     <ul>Answer</ul>
+    </div>
+    
+    <div>
+      <H1>Question 1 </H1>
+       <ul>Answer</ul>
+      </div>
+
+
+    <div>
+      <H1>Question 2 </H1>
+       <ul>Answer</ul>
+      </div>
+
+
+    <div>
+      <H1>Question 3? </H1>
+       <ul>Answer</ul>
+      </div>
+    
     <p>Read out frequently asked questions below!</p>
   </body>
 </html>
