--- a/faq.html
+++ b/faq.html
@@ -42,30 +42,30 @@
         </ul>
       </div>
     </div>
-    <h1>Take Me Out FAQ</h1>
+    <h1 class="text">Take Me Out FAQ</h1>
 
-    <div>
+    <div class="text">
     <H1>Question 1 </H1>
      <ul>Answer</ul>
     </div>
     
-    <div>
-      <H1>Question 1 </H1>
+    <div class="text">
+      <H1>Question 1? </H1>
        <ul>Answer</ul>
       </div>
 
 
-    <div>
-      <H1>Question 2 </H1>
+    <div class="text">
+      <H1>Question 2? </H1>
        <ul>Answer</ul>
       </div>
 
 
-    <div>
+    <div class="text">
       <H1>Question 3? </H1>
        <ul>Answer</ul>
       </div>
     
-    <p>Read out frequently asked questions below!</p>
+  
   </body>
 </html>
