adds footer and a little css styling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
-  <body style="background-color:powderblue;">
+  <body style="background-color: powderblue">
     <div class="fontSize">
       <div class="custom-menu-wrapper, fontSize">
         <div class="pure-menu custom-menu custom-menu-top">
@@ -106,23 +106,6 @@
                 </li>
               </ul>
             </li>
-            <li
-              class="pure-menu-item pure-menu-has-children pure-menu-allow-hover"
-              style="background-color: green"
-            >
-              <a href="#" class="pure-menu-link" style="color: white">
-                Open/Closed
-              </a>
-
-              <ul class="pure-menu-children">
-                <li class="pure-menu-item">
-                  <a href="#" class="pure-menu-link"> Open </a>
-                </li>
-                <li class="pure-menu-item">
-                  <a href="#" class="pure-menu-link"> Closed </a>
-                </li>
-              </ul>
-            </li>
           </ul>
         </div>
         <button
@@ -134,7 +117,9 @@
         </button>
       </fieldset>
     </form>
-
+    <footer>
+      <p>Take Me Out &copy 2023</p>
+    </footer>
     <!-- keep at bottom of body -->
     <script src="./assets/js/script.js"></script>
     <script
