updated FAQ template

--- a/faq.html
+++ b/faq.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Take Me Out FAQ</title>
+    <title>Take Me Out FAQ ?</title>
     <link
       rel="stylesheet"
       href="https://unpkg.com/purecss@2.0.5/build/pure-min.css"
@@ -44,7 +44,7 @@
     </div>
     <h1 class="text">Take Me Out FAQ</h1>
 
-    <div class="text">
+    <div class="text" id=firstQuestion>
     <H1>Question 1 </H1>
      <ul>Answer</ul>
     </div>
