added google font link

--- a/aboutus.html
+++ b/aboutus.html
@@ -44,7 +44,7 @@
     </div>
     <main>
       <h1>About Us</h1>
-      <div class="card">
+      <div class="card1">
         <div >
              
                 <img src="/Users/stevenfrancius/ID CARD /avatar-1577909_1280.webp " width="400" 
