--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         <div class="custom-menu-screen"></div>
         <ul class="pure-menu-list">
           <li class="pure-menu-item">
-            <a href="index.html" class="pure-menu-link">Home</a>
+            <a href="index.html" class="pure-menu-link navbar">Home</a>
           </li>
           <li class="pure-menu-item">
-            <a href="aboutus.html" class="pure-menu-link">About Us</a>
+            <a href="aboutus.html" class="pure-menu-link navbar">About Us</a>
           </li>
           <li class="pure-menu-item">
-            <a href="faq.html" class="pure-menu-link">FAQs</a>
+            <a href="faq.html" class="pure-menu-link navbar">FAQs</a>
           </li>
         </ul>
       </div>
@@ -123,7 +123,7 @@
     <!-- keep at bottom of body -->
     <script src="./assets/js/script.js"></script>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDMAjoIQZ_CJWBTz9m52oX-6WKhdK463GQ&callback=initMap&libraries=places&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=IzaSyDMAjoIQZ_CJWBTz9m52oX-6WKhdK463GQ&callback=initMap&libraries=places&v=weekly"
       defer
     ></script>
   </body>
