--- a/aboutus.html
+++ b/aboutus.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Take Me Out About Us</title>
+
+  <title id="aboutUs">Take Me Out About Us</title>
     <link
       rel="stylesheet"
       href="https://unpkg.com/purecss@2.0.5/build/pure-min.css"
