replaces some text and makes it larger for visibility

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <form class="pure-form">
       <fieldset>
         <legend>
-          Use the search bar below to find your perfect meal today!
+          <h3>Use the search bar below to find your perfect location today!</h3>
         </legend>
         <input id="input" type="text" placeholder="Food Type" />
         <div class="pure-menu pure-menu-horizontal">
