--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <legend>
           Use the search bar below to find your perfect meal today!
         </legend>
-        <input id="input" type="text" placeholder="Food Type" />
+        <input id="input" type="text" placeholder="location type" />
         <div class="pure-menu pure-menu-horizontal">
           <ul class="pure-menu-list">
             <li
