--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
         </button>
       </fieldset>
     </form>
+    <div id="placeList"></div>
     <footer>
       <p>Take Me Out &copy 2023</p>
     </footer>
