completed the first question of the FAQ

--- a/faq.html
+++ b/faq.html
@@ -45,12 +45,15 @@
     <h1 class="text">Take Me Out FAQ</h1>
 
     <div class="text" id=firstQuestion>
-    <H1>Question 1 </H1>
-     <ul>Answer</ul>
+    <H1>How do I find a location on the map?</H1>
+     <ul>1. U will need to allow google maps to have acces to your location.</ul>
+     <ul>2. Please wait until your current location is loaded on your screen, and then proceed to step #3 </ul>
+     <ul>3. Towards the bottom left input the type of place that you will like to go to and select one of the pre-selected radius options and then click on the search to view the results</ul>
+  
     </div>
     
     <div class="text">
-      <H1>Question 1? </H1>
+      <H1> </H1>
        <ul>Answer</ul>
       </div>
 
@@ -65,6 +68,15 @@
       <H1>Question 3? </H1>
        <ul>Answer</ul>
       </div>
+
+      <div class="text">
+        <H1>Question 3? </H1>
+         <ul>Answer</ul>
+        </div>
+        <div class="text">
+          <H1>Question 3? </H1>
+           <ul>Answer</ul>
+          </div>
     
   
   </body>
