removed and added new style to the FAQ page

--- a/faq.html
+++ b/faq.html
@@ -44,7 +44,9 @@
     </div>
     <h1 class="text">Take Me Out FAQ</h1>
 
-    <div class="text" id=firstQuestion>
+<div class="faqStlying">  
+
+    <div>
     <H1>How do I find a location on the map?</H1>
      <ul> Step#1: U will need to allow google maps to have acces to your location.</ul>
      <ul> Step#2: Please wait until your current location is loaded on your screen, and then proceed to step #3 </ul>
@@ -52,28 +54,28 @@
   
     </div>
     
-    <div class="text">
+    <div >
       <H1>How do I find the weather on the map? </H1>
        <ul> The weather is located on right side of the page and will load base on your current location</ul>
       </div>
 
 
-    <div class="text">
+    <div >
       <H1>Can I filter restaurant results by cuisine type? </H1>
        <ul>Currently this functionality is not available on our website</ul>
       </div>
 
 
-    <div class="text">
+    <div >
       <H1>Can I use take me out to order food for delivery or takeout?</H1>
        <ul>Currently this functionality is not available on our website </ul>
       </div>
 
       
-      <div class="text">
-        <H1>How can I see restaurant ratings and reviews?</H1>
-         <ul>Currently this functionality is not available on our website </ul>
+      <div >
+        <H1>How can I see a restaurant rating and location on the map</H1>
+         <ul> Click on the restaurant on the map and the rating and location will appear in a pop up window</ul>
         </div>
-  
+      </div>
   </body>
 </html>
