completed the faq page

--- a/faq.html
+++ b/faq.html
@@ -42,16 +42,17 @@
         </ul>
       </div>
     </div>
-    <h1 class="text">Take Me Out FAQ</h1>
+    <h1 id="titleFaq">Take Me Out FAQ</h1>
 
 <div class="faqStlying">  
 
     <div>
     <H1>How do I find a location on the map?</H1>
+    <div id="lineStyling"> 
      <ul> Step#1: U will need to allow google maps to have acces to your location.</ul>
      <ul> Step#2: Please wait until your current location is loaded on your screen, and then proceed to step #3 </ul>
      <ul> Step#3: Towards the bottom left input the type of place that you will like to go to and select one of the pre-selected radius options and then click on the search button to view the results</ul>
-  
+    </div>
     </div>
     
     <div >
