added styling to the page

--- a/faq.html
+++ b/faq.html
@@ -42,7 +42,7 @@
         </ul>
       </div>
     </div>
-    <h1 class="text">Take Me Out FAQ</h1>
+    <h1 >Take Me Out FAQ</h1>
 
     <div>
       <H1>How do I find a location on the map?</H1>
