completed FAQ changes

--- a/faq.html
+++ b/faq.html
@@ -42,8 +42,8 @@
         </ul>
       </div>
     </div>
-    <h1 >Take Me Out FAQ</h1>
-
+    <h1 id="titleFaq">Take Me Out FAQ</h1>
+    <div class="faqStlying">
     <div>
       <H1>How do I find a location on the map?</H1>
       <div id="lineStyling"> 
