changed some styling

--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title id="aboutUs">Take Me Out About Us</title>
+    <title id="">Take Me Out About Us</title>
     <link
       rel="stylesheet"
       href="https://unpkg.com/purecss@2.0.5/build/pure-min.css"
@@ -48,7 +48,12 @@
       </div>
     </div>
     <main>
-      <h1>About Us</h1>
+      <div id="titleAboutus">
+        <h1>About Us</h1>
+      </div>
+      
+
+
       <div class="body">
         <div class="card1">
           <div>
