--- a/faq.html
+++ b/faq.html
@@ -77,6 +77,8 @@
           </div>
         </div>
   
-   
+        <footer>
+          <p>Take Me Out &copy 2023</p>
+        </footer>
   </body>
 </html>
