--- a/faq.html
+++ b/faq.html
@@ -77,7 +77,7 @@
           </div>
         </div>
   
-        <footer>
+        <footer class="footer">
           <p>Take Me Out &copy 2023</p>
         </footer>
   </body>
