added footer styling to the home page

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       </fieldset>
     </form>
     <div id="placeList"></div>
-    <footer>
+    <foote class="footer">
       <p>Take Me Out &copy 2023</p>
     </footer>
     <!-- keep at bottom of body -->
