added footer to about us page

--- a/aboutus.html
+++ b/aboutus.html
@@ -243,5 +243,8 @@
         </div>
       </div>
     </main>
+    <footer >
+      <p>Take Me Out &copy 2023</p>
+    </footer>
   </body>
 </html>
