added addtional photos

--- a/aboutus.html
+++ b/aboutus.html
@@ -58,7 +58,7 @@
         <div class="card1">
           <div>
             <img
-              src="/Users/stevenfrancius/ID CARD /avatar-1577909_1280.webp "
+              src="/Users/stevenfrancius/final take me out /take-me-out/assets/picture folder/IMG_1742.jpeg"
               width="400"
               height="175"
               alt="Italian Trulli"
@@ -95,7 +95,7 @@
           <div class="card1">
             <div>
               <img
-                src="/Users/stevenfrancius/ID CARD /avatar-1577909_1280.webp "
+                src="/Users/stevenfrancius/final take me out /take-me-out/assets/picture folder/IMG_8382.jpg"
                 width="400"
                 height="175"
                 alt="Italian Trulli"
@@ -170,7 +170,7 @@
           <div class="card1">
             <div>
               <img
-                src="/Users/stevenfrancius/ID CARD /avatar-1577909_1280.webp "
+                src="/Users/stevenfrancius/final take me out /take-me-out/assets/picture folder/profile (1).jpg"
                 width="400"
                 height="175"
                 alt="Italian Trulli"
@@ -208,7 +208,7 @@
           <div class="card1">
             <div>
               <img
-                src="/Users/stevenfrancius/ID CARD /avatar-1577909_1280.webp "
+                src="/Users/stevenfrancius/final take me out /take-me-out/assets/picture folder/wayne.jpg "
                 width="400"
                 height="175"
                 alt="Italian Trulli"
