--- a/aboutus.html
+++ b/aboutus.html
@@ -102,7 +102,7 @@
               />
             </div>
 
-            <h2 class="name">Medeleine Kasemicheal</h2>
+            <h2 class="name">Madeleine Kasemicheal</h2>
             <div class="title">Software Developer</div>
             <div class="actions">
               <div class="follow-info">
