add parameter to the the API Link so it initialize on pageload.

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <!-- keep at bottom of body -->
     <script src="./assets/js/script.js"></script>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPexPrMoLM_7mv51Pvjmbf4k8qOELuREk&callback=initMap&libraries=places&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPexPrMoLM_7mv51Pvjmbf4k8qOELuREk&callback=initMap&callback=initAutocomplete&libraries=places&v=weekly"
       defer
     ></script>
   </body>
