--- a/aboutus.html
+++ b/aboutus.html
@@ -51,14 +51,12 @@
       <div id="titleAboutus">
         <h1>About Us</h1>
       </div>
-      
-
 
       <div class="body">
         <div class="card1">
           <div>
             <img
-              src="/Users/stevenfrancius/final take me out /take-me-out/assets/picture folder/IMG_1742.jpeg"
+              src="./assets/picture folder/IMG_1742.jpeg"
               width="400"
               height="175"
               alt="Italian Trulli"
@@ -95,7 +93,7 @@
           <div class="card1">
             <div>
               <img
-                src="/Users/stevenfrancius/final take me out /take-me-out/assets/picture folder/IMG_8382.jpg"
+                src="./assets/picture folder/IMG_8382.jpg"
                 width="400"
                 height="175"
                 alt="Italian Trulli"
@@ -131,7 +129,7 @@
           <div class="card1">
             <div>
               <img
-                src="/Users/stevenfrancius/ID CARD /avatar-1577909_1280.webp "
+                src="./assets/picture folder/IMG_1444.jpg"
                 width="400"
                 height="175"
                 alt="Italian Trulli"
@@ -170,7 +168,7 @@
           <div class="card1">
             <div>
               <img
-                src="/Users/stevenfrancius/final take me out /take-me-out/assets/picture folder/profile (1).jpg"
+                src="./assets/picture folder/profile (1).jpg"
                 width="400"
                 height="175"
                 alt="Italian Trulli"
@@ -208,7 +206,7 @@
           <div class="card1">
             <div>
               <img
-                src="/Users/stevenfrancius/final take me out /take-me-out/assets/picture folder/wayne.jpg "
+                src="./assets/picture folder/wayne.jpg"
                 width="400"
                 height="175"
                 alt="Italian Trulli"
@@ -243,7 +241,7 @@
         </div>
       </div>
     </main>
-    <footer >
+    <footer>
       <p>Take Me Out &copy 2023</p>
     </footer>
   </body>
