added the changes to complete the image

--- a/aboutus.html
+++ b/aboutus.html
@@ -58,7 +58,7 @@
         <div class="card1">
           <div>
             <img
-              src="/Users/stevenfrancius/final take me out /take-me-out/assets/picture folder/IMG_1742.jpeg"
+              src="assets/picture folder/IMG_1742.jpeg"
               width="400"
               height="175"
               alt="Italian Trulli"
@@ -95,14 +95,14 @@
           <div class="card1">
             <div>
               <img
-                src="/Users/stevenfrancius/final take me out /take-me-out/assets/picture folder/IMG_8382.jpg"
+                src="assets/picture folder/IMG_8382.jpg"
                 width="400"
                 height="175"
                 alt="Italian Trulli"
               />
             </div>
 
-            <h2 class="name">Medeleine Kasemicheal</h2>
+            <h2 class="name">Madeleine Kasemicheal</h2>
             <div class="title">Software Developer</div>
             <div class="actions">
               <div class="follow-info">
@@ -170,7 +170,7 @@
           <div class="card1">
             <div>
               <img
-                src="/Users/stevenfrancius/final take me out /take-me-out/assets/picture folder/profile (1).jpg"
+                src="assets/picture folder/profile (1).jpg"
                 width="400"
                 height="175"
                 alt="Italian Trulli"
@@ -208,7 +208,7 @@
           <div class="card1">
             <div>
               <img
-                src="/Users/stevenfrancius/final take me out /take-me-out/assets/picture folder/wayne.jpg "
+                src="assets/picture folder/wayne.jpg "
                 width="400"
                 height="175"
                 alt="Italian Trulli"
