add two additional options for radius input, 2.5 miles and 5 miles

--- a/index.html
+++ b/index.html
@@ -81,6 +81,20 @@
                   <a
                     href="#"
                     class="pure-menu-link radius-option"
+                    id="2.5-Miles"
+                  >
+                    2.5 miles</a
+                  >
+                </li>
+                <li class="pure-menu-item">
+                  <a href="#" class="pure-menu-link radius-option" id="5-Miles">
+                    5 miles</a
+                  >
+                </li>
+                <li class="pure-menu-item">
+                  <a
+                    href="#"
+                    class="pure-menu-link radius-option"
                     id="10-Miles"
                   >
                     10 miles</a
